[TEST] Add use cases for multilength separator : green state